# mcp-proxy

docker/: Dockerfile.mcp-proxy  config.yml
mcp-common/: Cargo.toml
mcp-common/src/: backend_bridge.rs  lib.rs
mcp-proxy/: Cargo.toml
mcp-proxy/src/: main.rs
mcp-proxy/src/client/core/: convert.rs  sse.rs  stream.rs
mcp-proxy/src/proxy/: mod.rs
mcp-proxy/src/server/task/: mcp_start_task.rs
mcp-sse-proxy/: Cargo.toml
mcp-sse-proxy/src/: lib.rs  server_builder.rs  sse_handler.rs
mcp-streamable-proxy/: Cargo.toml
mcp-streamable-proxy/src/: client.rs  proxy_handler.rs  server.rs  server_builder.rs  session_manager.rs
scripts/: build-runtime-image.sh  deploy-runtime-container.sh
